fix: dialog-sm (mobile) too large (vh)

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -75,7 +75,7 @@
     /* Dialog */
     .dialog-xs {
         width: 90vw;
-        max-height: 96vh;
+        max-height: 90vh;
     }
 
     .dialog-sm {
